demos/containerconf/servicemesh/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: fred-cilium-gw
  namespace: fred
  annotations:
    cert-manager.io/issuer: letsencrypt
spec:
  gatewayClassName: cilium
  listeners:
  - protocol: HTTP
    port: 80
    name: http
    allowedRoutes:
      namespaces:
        from: All
  - hostname: fred.demo.whiteduck.de
    protocol: HTTPS
    name: https
    port: 443
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: fred-demo-whiteduck
