demos/containerconf/servicemesh/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: fred
  namespace: fred
spec:
  parentRefs:
  - name: fred-cilium-gw
  hostnames:
  - "fred.demo.whiteduck.de"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - kind: Service
      name: fred
      port: 8080
      weight: 100
    - kind: Service
      name: fredv2
      port: 8080
      weight: 0
